Project paint artifacts. #42543

Closed
opened 2014-11-08 09:48:22 +01:00 by Nahuel Belich · 10 comments

System Information
Win 7 x64 (MAIN_DESKTOP_PC-_system-info.txt)
Win 7 x32 Home edition (laptop lenovo) (Laptop_system-info.txt)

Blender Version
Broken: at least since 2.69

Short description of error
https://www.youtube.com/watch?v=1bYJmhwCECI&feature=youtu.be
panting causes to wrong lines projection.

Exact steps for others to reproduce the error
Blend file: paint_bug.blend
1-open the blend file,
2- maximize blender if it starts restored window, using a 1920x1080 monitor resolution(this is very important)
3- try to paint as in the video, in the same place

Note: Before submit the bug i try to upgrade the desktop pc video drivers, for some reason i could not, but i connected the laptop to my main monitor (to get 1920x1080 res) and fails the same way, it is an other machine drivers even video card(info attached under System Information)
This error happen to me often but i was never able to get a test file it was too random, this is the first time i nailed the error. Hope that the info be enough.
Also notice in the video if the view angle its change a bit it works fine, as difficult as it seems to get the break angle it happends quite often.

**System Information** Win 7 x64 ([MAIN_DESKTOP_PC-_system-info.txt](https://archive.blender.org/developer/F122572/MAIN_DESKTOP_PC-_system-info.txt)) Win 7 x32 Home edition (laptop lenovo) ([Laptop_system-info.txt](https://archive.blender.org/developer/F122573/Laptop_system-info.txt)) **Blender Version** Broken: at least since 2.69 **Short description of error** https://www.youtube.com/watch?v=1bYJmhwCECI&feature=youtu.be panting causes to wrong lines projection. **Exact steps for others to reproduce the error** Blend file: [paint_bug.blend](https://archive.blender.org/developer/F122574/paint_bug.blend) 1-open the blend file, 2- maximize blender if it starts restored window, using a 1920x1080 monitor resolution(this is very important) 3- try to paint as in the video, in the same place Note: Before submit the bug i try to upgrade the desktop pc video drivers, for some reason i could not, but i connected the laptop to my main monitor (to get 1920x1080 res) and fails the same way, it is an other machine drivers even video card(info attached under **System Information**) This error happen to me often but i was never able to get a test file it was too random, this is the first time i nailed the error. Hope that the info be enough. Also notice in the video if the view angle its change a bit it works fine, as difficult as it seems to get the break angle it happends quite often.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

someting i realized, at the moment of testing if you are using windows, hide the bottom desktop tasks bar or move it to a second monitor, the bar makes the blender window a bit smaller and the test file no longer works.
Again seem extremly difficult to get the angle, but i accidentally trash several textures because of this before realizing what was happening.

someting i realized, at the moment of testing if you are using windows, hide the bottom desktop tasks bar or move it to a second monitor, the bar makes the blender window a bit smaller and the test file no longer works. Again seem extremly difficult to get the angle, but i accidentally trash several textures because of this before realizing what was happening.
Author

this bug was reproduced under a linux system. . . y forgot to ask for info about that system, but at least i know its posible to repeat it outside windows

this bug was reproduced under a linux system. . . y forgot to ask for info about that system, but at least i know its posible to repeat it outside windows

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Hi, I can't reproduce this here. There were too many changes to the paint code for 2.72 and recently we also fixed a bad bug with seam detection - which is what might be causing the issues there. Can you try a recent version from builder.blender.org and see if it works for you now?

Hi, I can't reproduce this here. There were too many changes to the paint code for 2.72 and recently we also fixed a bad bug with seam detection - which is what might be causing the issues there. Can you try a recent version from builder.blender.org and see if it works for you now?

Actually, confirmed now, will look into it later.

Actually, confirmed now, will look into it later.
Antonis Ryakiotakis self-assigned this 2014-11-09 15:24:22 +01:00

This issue was referenced by ef5c036d1c

This issue was referenced by ef5c036d1c675ff9912ca321339a45c2ab923da9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ef5c036d1c.

Closed by commit ef5c036d1c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42543
No description provided.